<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FF9800"
    tools:context=".CancionActivity">

    <Button
        android:id="@+id/btn_a_maps"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Maps"
        android:textColor="#FAF8F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/btn_a_acordeslist"
        app:layout_constraintTop_toBottomOf="@+id/tv_acordes" />

    <Button
        android:id="@+id/btn_a_acordeslist"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Ver acordes"
        android:textColor="#FAF8F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_cancion_a_main"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="#8BC34A"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Menu Principal"
        android:textColor="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar" />

    <TextView
        android:id="@+id/tv_acordes"
        android:layout_width="147dp"
        android:layout_height="18dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="Any"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_genero" />

    <TextView
        android:id="@+id/tv_genero"
        android:layout_width="147dp"
        android:layout_height="18dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:text="Any"
        android:textColor="#FDFDFD"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tv_autor" />

    <TextView
        android:id="@+id/tv_autor"
        android:layout_width="147dp"
        android:layout_height="18dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="Any"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/acordes"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/autor"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/genero"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:backgroundTint="#9A090909"
        android:text="@string/cancion_seleccionada"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="147dp"
        android:layout_height="18dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="Any"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:lineSpacingExtra="30sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Modificar Cancion"
        android:textColor="#F8F8F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_a_acordeslist" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Eliminar Canción"
        android:textColor="#FAF8F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

    <Button
        android:id="@+id/btn_cancion_a_lista"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:background="#8BC34A"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Lista Canciones"
        android:textColor="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancion_a_main"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar" />

</androidx.constraintlayout.widget.ConstraintLayout>